[package]
name = "ll-binance"
version = "0.1.0"
edition = "2024"

[dependencies]
base64 = "0.22.1"
ed25519-dalek = { version = "2.1.1", features = ["pkcs8", "pem"] }
serde = { version = "1.0.218", features = ["derive"] }
serde_json = "1.0.140"
serde_qs = "0.13.0"
sproxy = { version = "0.3.1", features = ["sync"] }
thiserror = "2.0.12"
tracing = "0.1.41"
url = { version = "2.5.4", features = ["serde"] }
reqwest = { version = "0.12.12", default-features = false, features = [
    "rustls-tls",
    "json",
    "zstd",
    "gzip",
    "deflate",
    "brotli",
    "blocking",
] }
ws-tool = "0.11.0"
time = { version = "0.3.36", features = [
    "formatting",
    "local-offset",
    "macros",
    "parsing",
    "serde-well-known",
] }
